--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p>Please enter your credentials to login</p>
         </div>
         
-        <form action="" method="post" id="loginHT">
+        <form action="/submition" method="post" id="loginHT">
             <div class="form-group">
                 <label for="username">Username or Email</label>
                 <input type="text" id="username" name="username" required>
